# sway-xkb-switcher

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  sway-xkb-switcher.spec
.github/workflows/: publish_on_tag.yaml
emacs_sway_xkb/: emacs_sway_xkb.py
i3_xkb_switcher/: switcher.py
sway_xkb_switcher/: switcher.py
